# gqe

./: .clang-format  .coderabbit.yaml  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.private  Jenkinsfile  LICENSE  README.md  REVIEW_GUIDELINES_CPP.md  SECURITY.md  entrypoint.sh
benchmark/: CMakeLists.txt  load_tpcds.cpp  tpc.cpp  tpcds.cpp  utility.hpp
benchmark/hardcoded/: q22.cpp  q3.cpp  q38.cpp  q3_udr.cu  q43.cpp  q48.cpp  q6.cpp  q7.cpp
proto/: CMakeLists.txt  data_type.proto  ddl_extension.proto  expression.proto  node_task_manager.proto  physical_plan.proto  result.proto  statistics.proto  storage.proto  task.proto  uuid.proto
rust/gqe-cli/: Cargo.toml  build.rs
rust/gqe-rs/: Cargo.toml
rust/gqe-sys/: CMakeLists.txt  Cargo.toml  build.rs
rust/pg-server/: Cargo.toml
rust/producer/: Cargo.toml
src/: CMakeLists.txt  catalog.cpp  communicator.cpp  device_properties.cpp  query_context.cpp  scheduler.cpp  task_manager_context.cpp  types.cpp
src/compiler/: CMakeLists.txt
src/executor/: aggregate.cpp  concatenate.cpp  eval.cpp  fetch.cpp  filter.cpp  gen_ident_col.cu  join.cpp  join.cu  like.cu  mark_join.cu  mark_join.cuh  optimization_parameters.cpp  partition.cpp  partition_merge.cpp  project.cpp  qep_adapter.cpp  qep_task_graph_transformation.cpp  query_context.cpp  read.cpp  sort.cpp  task.cpp  task_graph.cpp  unique_key_inner_join.cu  unique_key_inner_join.cuh  window.cpp  write.cpp
src/expression/: binary_op.cpp  cast.cpp  if_then_else.cpp  is_null.cpp  json_formatter.cpp  scalar_function.cpp  subquery.cpp  unary_op.cpp
src/libperfect/: CMakeLists.txt  condense.cuh  index_select.cuh  masked_join.cu  masked_join.hpp  memory_pool.cpp  memory_pool.hpp  query_common.cuh  query_common.hpp  reduce_and_or.cuh  scatter_aggregate.cu  scatter_aggregate.hpp  unique_indices.cu  unique_indices.hpp  xor_hash_table.cuh
src/logical/: aggregate.cpp  fetch.cpp  filter.cpp  from_substrait.cpp  join.cpp  project.cpp  read.cpp  relation.cpp  relation_visitor.cpp  set.cpp  sort.cpp  user_defined.cpp  window.cpp  write.cpp
src/memory_resource/: boost_shared_memory_resource.cpp  memory_utilities.cpp  numa_memory_resource.cpp  numa_pool_memory_resource.cpp  pgas_memory_resource.cpp  pinned_memory_resource.cpp  shared_numa_pool_memory_resource.cpp  system_memory_resource.cpp
src/node_manager/: CMakeLists.txt  context.cpp  main.cpp  node_manager.cpp  nvshmem_bootstrap.cpp  service.cpp  spawn.cpp
src/optimizer/: estimator.cpp  logical_optimization.cpp  optimization_configuration.cpp  physical_transformation.cpp  relation_properties.cpp  statistics.cpp
src/physical/: aggregate.cpp  fetch.cpp  filter.cpp  gen_ident_col.cpp  join.cpp  project.cpp  read.cpp  relation_visitor.cpp  set.cpp  shuffle.cpp  sort.cpp  user_defined.cpp  window.cpp  write.cpp
src/qep/: algorithms.cpp  query_execution_plan.cpp  state.cpp  task.cpp
src/rpc/: task_migration.cpp
src/storage/: compression.cpp  descriptor.cpp  in_memory.cpp  nvcomp_adapter.cpp  nvcomp_adapter.hpp  nvcomp_gqe.cpp  parquet.cpp  parquet.cu  parquet_reader.cpp  parquet_reader.cu  sliced_columns.cpp  sliced_columns.cu  zone_map.cpp
src/task_manager/: CMakeLists.txt  main.cpp  plan_executor.cpp  remote_table_cache.cpp  service.cpp  task_manager.cpp
src/utility/: cuda.cpp  cuda_driver.cpp  cudf_to_arrow.cpp  cupti.cpp  cupti_activity.cpp  cupti_range.cpp  error.cpp  hashing.cpp  helpers.cpp  kernel_arguments_builder.cpp  kernel_fusion_helpers.cpp  linux.cpp  mpi_helpers.cpp  multi_process_helpers.cpp  serialization.cpp  timer.cpp  tpcds.cpp  tpch.cpp  uuid.cpp
test/: CMakeLists.txt  utility.hpp
test/compiler/: CMakeLists.txt  README.md  kernel_launch.cpp  kernel_launch.hpp  mlir_cpu_engine.cpp  mlir_cudf_table_materialize_test.cpp  mlir_gpu_engine.cpp  mlir_gpu_standalone.cpp  mlir_tpch_q6.cpp
test/end_to_end/: run_tpc.sh  verify_parquet.py
test/executor/: aggregate_task_test.cpp  concatenate_task_test.cpp  eval_expressions_test.cpp  fetch_task_test.cpp  filter_task_test.cpp  join_task_test.cpp  like_expression_test.cpp  mark_join_test.cpp  multi_process_test.cpp  project_task_test.cpp  qep_adapter_test.cpp  qep_task_graph_transformation_test.cpp  read_task_test.cpp  shuffle_join_test.cpp  shuffle_task_test.cpp  sort_task_test.cpp  task_graph_generation_test.cpp  task_serdes_test.cpp  unique_key_inner_join_test.cpp  utilities.hpp  window_task_test.cpp
test/executor_next/: test_utilities.hpp
test/integration/: flight_sql_ddl_test.cpp  flight_sql_lifecycle_test.cpp  flight_sql_physical_plan_tpch_test.cpp  flight_sql_test_harness.cpp  flight_sql_test_harness.hpp  flight_sql_test_utils.cpp  flight_sql_test_utils.hpp  flight_sql_tpch_test.cpp  in_memory_storage.cpp  logical_to_execution.cpp  parquet_storage.cpp  substrait_to_physical.cpp
test/libperfect/: scatter_aggregate_tests.cpp  unique_indices_tests.cpp
test/logical/: common.cpp  common.hpp  constant.hpp  expression_equal_test.cpp  relation_equal_test.cpp  run_substrait_consumer.cpp  substrait_ddl_test.cpp  substrait_if_then_test.cpp
test/memory_resource/: memory_resource.cpp
test/multiprocess/: execution.cpp
test/node_manager/: process_group_test.cpp
test/optimizer/: aggregate_perfect_hash_test.cpp  column_name_assignment_test.cpp  constant_folding_test.cpp  extract_complex_expressions_into_project_test.cpp  fix_partial_filter_column_references_test.cpp  join_children_swap_test.cpp  join_unique_keys_test.cpp  mean_decomposition_test.cpp  plan_join_test.cpp  projection_pushdown_test.cpp  push_projection_to_filter_test.cpp  relation_properties_test.cpp  rewrite_rule_test.cpp  string_to_int_literal_test.cpp  uniqueness_propagation_test.cpp
test/qep/: algorithms_test.cpp
test/rpc/: optimization_parameters_test.cpp  physical_plan_serdes_test.cpp
test/storage/: in_memory_read_task_test.cpp  parquet_reader.cpp  zone_map_test.cpp
test/task_graph/: task_graph_generation_test.cpp
test/task_manager/: remote_table_cache_test.cpp
test/utility/: helpers.cpp  (+7 more)
(+355 files in other folders)
